# apple-health-export-automation-backup

./: .dockerignore  .env.example  .gitignore  .mcp.example.json  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.backup  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
docs/: configuration.md  data-model.md  development.md  ios-app-setup.md  mcp.md  operations.md  telegram-bot.md
grafana/provisioning/dashboards/: dashboard.yml  health-overview.json  health-trends.json
grafana/provisioning/datasources/: influxdb.yml
scripts/: backup.sh
skills/apple-health/: README.md  SKILL.md
src/health_ingest/: __init__.py  archive.py  circuit_breaker.py  cli.py  config.py  dedup.py  dlq.py  duckdb_analytics.py  http_handler.py  influx_writer.py  logging.py  main.py  mcp_server.py  metrics.py  mqtt_handler.py  query.py  schema_validation.py  tracing.py  types.py
src/health_ingest/bot/: __init__.py  commands.py  dispatcher.py  formatter.py  insights.py  queries.py
src/health_ingest/reports/: __init__.py  analysis_contract.py  analysis_monitoring.py  daily.py  delivery.py  formatter.py  insights.py  models.py  rules.py  visualization.py  weekly.py
src/health_ingest/reports/prompts/: bot_command_v1.md  daily_evening_v1.md  daily_morning_v1.md  weekly_insight_v1.md
src/health_ingest/transformers/: __init__.py  activity.py  audio.py  base.py  body.py  generic.py  heart.py  mobility.py  registry.py  sleep.py  vitals.py  workout.py
tests/: __init__.py  conftest.py  test_analysis_contract.py  test_archive.py  test_archive_async.py  test_archive_sync.py  test_bot_commands.py  test_bot_dispatcher.py  test_bot_formatter.py  test_bot_insights.py  test_bot_webhook.py  test_circuit_breaker.py  test_config.py  test_daily.py  test_dedup.py  test_dedup_persistence.py  test_delivery.py  test_dlq.py  test_dlq_cleanup.py  test_http_auth.py  test_http_handler.py  test_influx_writer.py  test_insights.py  test_insights_circuit_breaker.py  test_integration_pipeline.py  test_mcp_metric_commands.py  test_mcp_server.py  test_mqtt_handler.py  test_schema_validation.py  test_tracing.py  test_transformers.py  test_visualization.py  test_weekly_bundle.py
