[project]
name = "health-ingest"
version = "0.1.0"
description = "Apple Health data ingestion from MQTT to InfluxDB with Grafana visualization"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [
    { name = "", email = "" }
]
keywords = [
    "apple-health",
    "health-data",
    "mqtt",
    "influxdb",
    "grafana",
    "time-series",
    "health-tracking",
    "quantified-self",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "paho-mqtt>=2.1",
    "influxdb-client[async]>=1.40",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "anthropic>=0.40",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/po4yka/apple-health-export-automation-backup"
Repository = "https://github.com/po4yka/apple-health-export-automation-backup"
Issues = "https://github.com/po4yka/apple-health-export-automation-backup/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
health-ingest = "health_ingest.main:run"
health-check = "health_ingest.main:health_check_cli"
health-report = "health_ingest.reports.weekly:run_report"
health-archive-replay = "health_ingest.cli:archive_replay"
health-archive = "health_ingest.cli:archive_manage"
health-dlq-inspect = "health_ingest.cli:dlq_inspect"
health-dlq-replay = "health_ingest.cli:dlq_replay"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/health_ingest"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["N815", "SIM105"]  # N815: Allow camelCase for Pydantic JSON aliases; SIM105: contextlib.suppress doesn't work with await

[tool.ruff.lint.per-file-ignores]
"src/health_ingest/reports/weekly.py" = ["E501"]  # Long Flux queries

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
