[project]
name = "health-ingest"
version = "0.1.0"
description = "Apple Health data ingestion via REST API to InfluxDB with Grafana visualization"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [
    { name = "", email = "" }
]
keywords = [
    "apple-health",
    "health-data",
    "influxdb",
    "grafana",
    "time-series",
    "health-tracking",
    "quantified-self",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.11",
    "influxdb-client[async]>=1.50",
    "pydantic>=2.12",
    "pydantic-settings>=2.12",
    "structlog>=25.5",
    "anthropic>=0.77",
    "httpx>=0.28",
    "tenacity>=9.0",
    "prometheus-client>=0.21",
]

[project.urls]
Homepage = "https://github.com/po4yka/apple-health-export-automation-backup"
Repository = "https://github.com/po4yka/apple-health-export-automation-backup"
Issues = "https://github.com/po4yka/apple-health-export-automation-backup/issues"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-aiohttp>=1.1",
    "ruff>=0.14",
]

[project.scripts]
health-ingest = "health_ingest.main:run"
health-check = "health_ingest.main:health_check_cli"
health-report = "health_ingest.reports.weekly:run_report"
health-report-send = "health_ingest.reports.weekly:run_report_and_send"
health-archive-replay = "health_ingest.cli:archive_replay"
health-archive = "health_ingest.cli:archive_manage"
health-dlq-inspect = "health_ingest.cli:dlq_inspect"
health-dlq-replay = "health_ingest.cli:dlq_replay"
health-query = "health_ingest.query:query_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/health_ingest"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["N815", "SIM105"]  # N815: Allow camelCase for Pydantic JSON aliases; SIM105: contextlib.suppress doesn't work with await

[tool.ruff.lint.per-file-ignores]
"src/health_ingest/reports/weekly.py" = ["E501"]  # Long Flux queries
"src/health_ingest/reports/rules.py" = ["E501"]  # Rule content strings

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
